// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate (--config-emoji) > basic > shows the correct emojis 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🌟 Set in the \`custom\` configuration.\\
🔥 Set in the \`recommended\` configuration.\\
🎨 Set in the \`stylistic\` configuration.

| Name                           | Description             | 💼    |
| :----------------------------- | :---------------------- | :---- |
| [no-bar](docs/rules/no-bar.md) | Description for no-bar. | 🔥 🎨 |
| [no-baz](docs/rules/no-baz.md) | Description for no-boz. | 🌟 🎨 |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | 🔥    |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--config-emoji) > basic > shows the correct emojis 2`] = `
"# test/no-foo

📝 Description for no-foo.

💼 This rule is enabled in the 🔥 \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--config-emoji) > basic > shows the correct emojis 3`] = `
"# test/no-bar

📝 Description for no-bar.

💼 This rule is enabled in the following configs: 🔥 \`recommended\`, 🎨 \`stylistic\`.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--config-emoji) > basic > shows the correct emojis 4`] = `
"# test/no-baz

📝 Description for no-boz.

💼 This rule is enabled in the following configs: 🌟 \`custom\`, 🎨 \`stylistic\`.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--config-emoji) > with default emoji for common config > uses the default emoji when no configEmoji option is provided 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description             | 💼 |
| :----------------------------- | :---------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--config-emoji) > with default emoji for common config > uses the default emoji when no configEmoji option is provided 2`] = `
"# test/no-foo

📝 Description for no-foo.

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--config-emoji) > with manually supplied badge markdown > uses the badge markdown as provided 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
![fun config badge](https://img.shields.io/badge/-fun-blue.svg) Set in the \`funConfig\` configuration.

| Name                           | Description             | 💼                                                              |
| :----------------------------- | :---------------------- | :-------------------------------------------------------------- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ![fun config badge](https://img.shields.io/badge/-fun-blue.svg) |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--config-emoji) > with manually supplied badge markdown > uses the badge markdown as provided 2`] = `
"# test/no-foo

📝 Description for no-foo.

💼 This rule is enabled in the ![fun config badge](https://img.shields.io/badge/-fun-blue.svg) \`funConfig\` config.

<!-- end auto-generated rule header -->
"
`;
